
07/09/2023:
	- Fix normalization in convolution when kernel sums to zero


03/09/2023: Version 1.2 Released


13/07/2023:
	- Added missing spaces to configure.ac test for Kakadu, which was causing false positive in certain conditions


19/06/2023:
	- Harmonized iipsrv identity string between JPEG and PNG.
	- Added ability to choose a particular page or slice in an image stack when using IIIF by using
	  a comma delimitter after the file name. For example: /image.tif,5/full/500/0/default.jpg (6th page)


05/06/2023:
	- Updated SPECTRA.cc to use stack names


31/05/2023:
	- Updated IIIF to default to version 3 of the Image API


27/05/2023:
	- Refactored codec class constructors to call base class constructor with member initialization list.
	- Fixed number of compiler and Coverity warnings.


22/05/2023:
	- Added ability to handle CORS preflight requests using the HTTP OPTIONS method


17/05/2023:
	- Changed the IIIF scaleFactors variable in info.json to calculate the real scale between levels and not
	  just assume powers of 2.
	- TPTImage now skips non-tiled IFDs: this enables compatibility with formats such as Aperio SVS and others
	  that include non-resolution images such as thumbnails within the IFD sequence.


20/04/2023:
	- CVT now uses same header create function as all other commands, thereby adding missing CORS headers
	  (Fixes: https://github.com/ruven/iipsrv/issues/256). Also removed obsolete chunking code from CVT.cc
	  (chunking no longer supported in HTTP/2).
	- Changed Content-Disposition file name to add size information and allow browser download via "attachment"
	  type when a POST request is received.


06/04/2023:
	- Added ability to serve DPI information through metadata retrieval via OBJ class and through physical dimensions
	  service for IIIF info.json


28/03/2023:
	- Added support for pyramid resolutions stored within SubIFDs for TIFF images. This allows for support for image