@@ -1,3 +1,6 @@
+11/09/2023:
+	- Added extra check for untiled TIFF images
+
 
 07/09/2023:
 	- Fix normalization in convolution when kernel sums to zero
